--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@react-three/drei": "^9.105.2",
+    "@react-three/fiber": "^8.16.1",
+    "amqplib": "^0.10.4",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
+    "node": "^18.20.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^2.2.2",
+    "three": "^0.163.0",
+    "three-globe": "^2.31.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -21,6 +34,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
