--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "node": "^18.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.2",
     "three": "^0.163.0",
