--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.10.4",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.25",
     "node": "^18.20.2",
     "react": "^18.2.0",
