--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@react-three/drei": "^9.105.2",
     "@react-three/fiber": "^8.16.3",
     "amqplib": "^0.10.4",
