--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.0.25",
     "gh-pages": "^6.1.1",
     "node": "^18.20.2",
